--- a/高仿网易新闻客户端/NewsGroup.plist
+++ b/高仿网易新闻客户端/NewsGroup.plist
@@ -7,130 +7,162 @@
 		<string>头条</string>
 		<key>type</key>
 		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/headline/T1348647853363</string>
-		<key>adUrl</key>
-		<string>http://c.m.163.com/nc/ad/headline</string>
-	</dict>
-	<dict>
-		<key>title</key>
-		<string>nba</string>
-		<key>type</key>
-		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com//nc/article/list/T1348649145984</string>
+		<key>tid</key>
+		<string>T1348647853363</string>
+		<key>headLine</key>
+		<true/>
 	</dict>
 	<dict>
 		<key>title</key>
 		<string>手机</string>
 		<key>type</key>
 		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com//nc/article/list/T1348649654285</string>
+		<key>tid</key>
+		<string>T1348649654285</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>移动互联</string>
+		<string>影视</string>
 		<key>type</key>
 		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1351233117091</string>
+		<key>tid</key>
+		<string>T1348648650048</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>财经</string>
+		<key>type</key>
+		<integer>0</integer>
+		<key>tid</key>
+		<string>T1348648756099</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>体育</string>
+		<key>type</key>
+		<integer>0</integer>
+		<key>tid</key>
+		<string>T1348649079062</string>
 	</dict>
 	<dict>
 		<key>title</key>
 		<string>娱乐</string>
 		<key>type</key>
 		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348648517839</string>
-	</dict>
-	<dict>
-		<key>title</key>
-		<string>时尚</string>
-		<key>type</key>
-		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348650593803</string>
-	</dict>
-	<dict>
-		<key>title</key>
-		<string>电影</string>
-		<key>type</key>
-		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348648650048</string>
+		<key>tid</key>
+		<string>T1348648517839</string>
 	</dict>
 	<dict>
 		<key>title</key>
 		<string>科技</string>
 		<key>type</key>
 		<integer>0</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348649580692</string>
+		<key>tid</key>
+		<string>T1348649580692</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>头条_1</string>
+		<string>社会</string>
 		<key>type</key>
-		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/headline/T1348647853363</string>
+		<integer>0</integer>
+		<key>tid</key>
+		<string>T1348648037603</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>nba_1</string>
+		<string>CBA</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348649145984</string>
+		<key>tid</key>
+		<string>T1348649475931</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>手机_1</string>
+		<string>中国足球</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348649654285</string>
+		<key>tid</key>
+		<string>T1348649503389</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>移动互联_1</string>
+		<string>国际足球</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1351233117091</string>
+		<key>tid</key>
+		<string>T1348649176279</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>娱乐_1</string>
+		<string>原创</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348648517839</string>
+		<key>tid</key>
+		<string>T1370583240249</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>时尚_1</string>
+		<string>NBA</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348650593803</string>
+		<key>tid</key>
+		<string>T1348649145984</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>电影_1</string>
+		<string>画报</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348648650048</string>
+		<key>tid</key>
+		<string>T1422935072191</string>
 	</dict>
 	<dict>
 		<key>title</key>
-		<string>科技_1</string>
+		<string>历史</string>
 		<key>type</key>
 		<integer>1</integer>
-		<key>url</key>
-		<string>http://c.m.163.com/nc/article/list/T1348649580692</string>
+		<key>tid</key>
+		<string>T1368497029546</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>彩票</string>
+		<key>type</key>
+		<integer>1</integer>
+		<key>tid</key>
+		<string>T1356600029035</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>跑步</string>
+		<key>type</key>
+		<integer>1</integer>
+		<key>tid</key>
+		<string>T1411113472760</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>数码</string>
+		<key>type</key>
+		<integer>1</integer>
+		<key>tid</key>
+		<string>T1348649776727</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>移动互联</string>
+		<key>type</key>
+		<integer>1</integer>
+		<key>tid</key>
+		<string>T1351233117091</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>汽车</string>
+		<key>type</key>
+		<integer>1</integer>
+		<key>tid</key>
+		<string>T1348654060988</string>
 	</dict>
 </array>
 </plist>
